# xecarlox94.github.io

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  config.toml  flake.nix  xecarlox94-github-io.cabal
_cache/: 6712876889041999715  8791962016881733505
app/: Main.hs
content/are_you_seeking_simplicity_or_simplification/: index.md
content/minishell/: index.md
docs/: 404.html  custom.css  docs.cabal  index.html  robots.txt  search_index.en.js  search_index.en.json  site.css  sitemap.xml
docs/blog/: index.html
docs/categories/: index.html
docs/categories/tutorial/: atom.xml  index.html
docs/minishell/: index.html
docs/page/1/: index.html
docs/tags/: index.html
docs/tags/cli/: atom.xml  index.html
docs/tags/rust/: atom.xml  index.html
drafts/desktop_environments_are_not_user_friendly/: index.txt
drafts/haskell_is_industrial/: index.txt
drafts/type_systems_are_real_artificial_intelligence/: index.txt
initial-example/: initial-example.cabal
public/: search_index.en.js
sass/: custom.scss
src/: home.html  post.html
templates/: index.html
