cabal-version:      3.0
name:               xecarlox94-github-io
version:            0.1.0.0
synopsis:           Website
-- description:
homepage:           https://xecarlox94.github.io/
license:            Apache-2.0
license-file:       LICENSE
author:             xecarlox94
maintainer:         jf94.uk@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable xecarlox94-github-io
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.2.1
      , hakyll
      , filepath

    hs-source-dirs:   app
    default-language: Haskell2010
